test/error/PreEndifUnmatched.ci
public static class Test
{
	public static bool Run()
	{
#endif //ERROR: '#endif' with no matching '#if'
		return true;
	}
}
